cabal-version:   3.0
name:            olaola
version:         0.1.0.0
license:         NONE
build-type:      Custom
extra-doc-files: CHANGELOG.md

data-dir: mydatadir

custom-setup
    setup-depends: base, Cabal

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.19.1.0, template-haskell, process
    build-tool-depends: buildtool:buildtool
    hs-source-dirs:   src
    default-language: Haskell2010
    autogen-modules: Paths_olaola
    other-modules: Paths_olaola
