cabal-version:   3.0
name:            buildtool
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

data-dir: buildtooldatadir

common warnings
    ghc-options: -Wall

executable buildtool
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
    autogen-modules: Paths_buildtool
    other-modules: Paths_buildtool
